[gd_scene load_steps=7 format=3 uid="uid://267yp48csqck"]

[ext_resource type="Script" path="res://scenes/objects/simple_switch.gd" id="1_w246m"]

[sub_resource type="Animation" id="Animation_n2cpp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwitchHandle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.309]
}

[sub_resource type="Animation" id="Animation_nfqca"]
resource_name = "switch_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwitchHandle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.56917, 1),
"update": 0,
"values": [1.309, -1.309]
}

[sub_resource type="Animation" id="Animation_8x7qv"]
resource_name = "switch_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwitchHandle:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.56917, 1),
"update": 0,
"values": [-1.309, 1.309]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ya16"]
_data = {
"RESET": SubResource("Animation_n2cpp"),
"switch_off": SubResource("Animation_nfqca"),
"switch_on": SubResource("Animation_8x7qv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_c2uao"]
radius = 47.0744

[node name="SimpleSwitch" type="Node2D"]
script = ExtResource("1_w246m")

[node name="SwitchHandle" type="Polygon2D" parent="."]
position = Vector2(2.38419e-07, -13)
rotation = 1.309
scale = Vector2(0.538398, 1)
color = Color(0.941176, 0.8, 0.0627451, 1)
polygon = PackedVector2Array(-9, -2, 10, -1, 20.0398, -89.9911, -15.9597, -91.0071)

[node name="SwitchBase" type="Polygon2D" parent="."]
color = Color(0.768627, 0.552941, 0.270588, 1)
polygon = PackedVector2Array(-58, 0, 57, 0, 26, -37, -26, -37)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ya16")
}

[node name="ActivationArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2(0, -22)
shape = SubResource("CircleShape2D_c2uao")

[connection signal="body_entered" from="ActivationArea" to="." method="_on_activation_area_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_activation_area_body_exited"]
[connection signal="input_event" from="ActivationArea" to="." method="_on_activation_area_input_event"]
[connection signal="mouse_entered" from="ActivationArea" to="." method="_on_activation_area_mouse_entered"]
[connection signal="mouse_exited" from="ActivationArea" to="." method="_on_activation_area_mouse_exited"]
